[package]
name = "mpegts-io"
version = "0.1.0"
authors = ["Cirrus <cirrus.neptune@protonmail.com>"]
description = "Library for reading and writing MPEG transport streams"
keywords = []
categories = []
license = "MIT"
repository = "https://github.com/CirrusNeptune/mpegts-io.git"
documentation = "https://docs.rs/mpegts-io"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
modular-bitfield-msb = "~0.11.2"
log = "~0.4.11"
crc = "~2.0.0"
enum_dispatch = "~0.3.7"
smallvec = "~1.8.1"
num-derive = "~0.3.3"
num-traits = "~0.2.14"
lalrpop-util = "~0.19.6"
regex = "1"

[dev-dependencies]
version-sync = "~0.9.2"
pretty_env_logger = "~0.4.0"

[build-dependencies]
lalrpop = "~0.19.6"
